WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147948
Web Inspector: CRASH under WebInspector::closeFrontend for some protocol tests
https://bugs.webkit.org/show_bug.cgi?id=147948
Summary
Web Inspector: CRASH under WebInspector::closeFrontend for some protocol tests
Blaze Burg
Reported
2015-08-12 13:04:34 PDT
I think this is happening during teardown in some protocol tests, though I can't exactly pinpoint the conditions for reproducing the crash. It has not been appearing on the bots, but I have run into it hard in my current work on <
https://webkit.org/b/147934
> NOTES: The WKTR harness automatically calls WKInspectorClose at the end of a test run, but the real inspector may not have been opened at that point. Regardless, it sends a WebInspector::Close message on the frontend connection, which may have not been initialized. I think this can be solved with an early exit in WebInspector::closeFrontend().
Attachments
Proposed Fix
(2.61 KB, patch)
2015-08-12 14:17 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2015-08-12 13:04:58 PDT
<
rdar://problem/18545278
>
Blaze Burg
Comment 2
2015-08-12 14:17:02 PDT
Created
attachment 258846
[details]
Proposed Fix
Blaze Burg
Comment 3
2015-08-12 14:31:09 PDT
Adding this as a blocking bug, since it seems to be triggered by the refactoring.
Joseph Pecoraro
Comment 4
2015-08-12 15:12:14 PDT
Comment on
attachment 258846
[details]
Proposed Fix r=me
WebKit Commit Bot
Comment 5
2015-08-12 16:03:02 PDT
Comment on
attachment 258846
[details]
Proposed Fix Clearing flags on attachment: 258846 Committed
r188362
: <
http://trac.webkit.org/changeset/188362
>
WebKit Commit Bot
Comment 6
2015-08-12 16:03:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug