Web Inspector: CRASH under WebInspector::closeFrontend for some protocol tests https://bugs.webkit.org/show_bug.cgi?id=147948

Reviewed by Joseph Pecoraro.

* WebProcess/WebPage/WebInspector.cpp:
(WebKit::WebInspector::closeFrontend): Don't invalidate the channel if it's null.
* WebProcess/WebPage/WebInspector.h: Add default member variable values.


Canonical link: https://commits.webkit.org/166062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188362 268f45cc-cd09-0410-ab3c-d52691b4dbfc