Source/WebKit2/WebProcess/WebPage/WebInspector.h
@@ -105,10 +105,10 @@ private:
 
     RefPtr<IPC::Connection> m_frontendConnection;
 
-    bool m_attached;
-    bool m_previousCanAttach;
+    bool m_attached { false };
+    bool m_previousCanAttach { false };
 #if ENABLE(INSPECTOR_SERVER)
-    bool m_remoteFrontendConnected;
+    bool m_remoteFrontendConnected { false };
 #endif
 };
 
